--- a/src/main/resources/templates/ubicacion.html
+++ b/src/main/resources/templates/ubicacion.html
@@ -33,7 +33,7 @@
             </article>
             <article>
                 <<header><h3>Instalaciones</h3>
-                    <img src="../static/imagenes/Instalaciones.jpg" alt=""/>
+                    <img src="/static/imagenes/Instalaciones.jpg" alt=""/>
                 </header>>
             </article>
         </section>
