--- a/src/main/resources/templates/contacto.html
+++ b/src/main/resources/templates/contacto.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Contacto</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    </head>
+    <body>
 
-    <header class="bg-warning text-center p-3">
-        <h2>¿Necesitas ayuda?</h2>
-    </header>
+        <header class="bg-warning text-center p-3">
+            <h1>¿Necesitas ayuda?</h1>
+        </header>
 
-    <div class="container text-center mt-5">
-        <div class="row">
-            <div class="col-md-4">
-                <img src="telefono.png" alt="Teléfono" class="icono">
-                <p>Llámanos al 2254-3555</p>
-            </div>
-            <div class="col-md-4">
-                <img src="chat.png" alt="Chat" class="icono">
-                <p>Escríbenos</p>
-            </div>
-            <div class="col-md-4">
-                <img src="correo.png" alt="Correo" class="icono">
-                <p>Correo electrónico - guarderia@gmail.com</p>
+        <div class="container text-center mt-5">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="imagenes/telefono.jpg" alt="" style="width: 80%"/>
+                    <p>Llámanos al 2254-3555</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="imagenes/Chat.jpg" alt="" style="width: 80%"/>
+                    <p>Escríbenos</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="imagenes/correo.jpg" alt="" style="width: 80%"/>
+                    <p>Correo electrónico - guarderia@gmail.com</p>
+                </div>
             </div>
         </div>
-    </div>
 
-</body>
+    </body>
 </html>
 
