--- a/src/main/resources/templates/contacto.html
+++ b/src/main/resources/templates/contacto.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     </head>
     <body>
+        <div th:replace="layout/plantilla :: header"></div>
 
         <header class="bg-warning text-center p-3">
             <h1>¿Necesitas ayuda?</h1>
