Segundo Avance DanielGutierrez

--- a/src/main/resources/templates/areaPsicologica.html
+++ b/src/main/resources/templates/areaPsicologica.html
@@ -49,6 +49,9 @@
     </style>
 </head>
 <body>
+    
+
+        
     <div th:replace="layout/plantilla :: header"></div>
     <header class="custom-header">
         Área de Psicología - Guardería
@@ -69,5 +72,7 @@
         <p><strong>Teléfono:</strong> +123 456 789</p>
         <a href="mailto:guarderia@gmail.com" class="button">Contáctanos</a>
     </div>
+    
+    <footer th:replace="layout/plantilla :: footer"></footer>
 </body>
 </html>
