--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -104,6 +104,8 @@
 
         <a href="#" class="button">Más Información</a>
     </div>
+    
+    <footer th:replace="layout/plantilla :: footer"></footer>
 
 </body>
 </html>
