--- a/src/main/resources/templates/Cursos.html
+++ b/src/main/resources/templates/Cursos.html
@@ -130,6 +130,8 @@
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
+    <footer th:replace="layout/plantilla :: footer"></footer>
 
 </body>
 </html>
