--- a/src/main/resources/templates/Matricula.html
+++ b/src/main/resources/templates/Matricula.html
@@ -46,5 +46,7 @@
             </div>
         </div>
     </div>
+    
+    <footer th:replace="layout/plantilla :: footer"></footer>
 </body>
 </html>
