--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-    <title>Guardería Feliz</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-    <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-    <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-    <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
-<body>
-    <header th:fragment="header" class="header">
-        <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
-            <div class="container">
-                <a th:href="@{/}" class="navbar-brand">Guardería</a>
-                <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
-                    <ul class="navbar-nav">
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/Matricula}">Matrícula</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/Cursos}">Cursos</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/horario}">Horarios</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/areaPsicologica}">Área Psicológica</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/metodoDePago}">Método de Pago</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/ubicacion}">Ubicación</a></li>
-                        <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto}">Contacto</a></li>
-                    </ul>
+    <head th:fragment="head">
+        <title>Guardería Feliz</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    </head>
+    <body>
+        <header th:fragment="header" class="header">
+            <nav class="navbar navbar-expand-sm navbar-dark bg-dark p-0">
+                <div class="container">
+                    <a th:href="@{/}" class="navbar-brand">Guardería</a>
+                    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
+                        <ul class="navbar-nav">
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/inicioseccion}">Iniciar Sesion</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Matricula}">Matrícula</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Cursos}">Cursos</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/horario}">Horarios</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/areaPsicologica}">Área Psicológica</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/metodoDePago}">Método de Pago</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/ubicacion}">Ubicación</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/contacto}">Contacto</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Nosotros}">Conocenos</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Redes}">Redes</a></li>
+                            <li class="nav-item px-2"><a class="nav-link" th:href="@{/Financiamiento}">Planes</a></li>
+                        </ul>
+                    </div>
                 </div>
+            </nav>
+        </header>
+
+        <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
+            <div class="container">
+                <div class="col">
+                    <p class="lead text-center">Since 2010</p>
+                 </div>   
             </div>
-        </nav>
-    </header>
-</body>
+        </footer>
+    </body>
 </html>
