--- a/src/main/resources/templates/ubicacion.html
+++ b/src/main/resources/templates/ubicacion.html
@@ -43,6 +43,8 @@
             </div>
         </div>
     </div>
+    
+    <footer th:replace="layout/plantilla :: footer"></footer>
 
 </body>
 </html>
