--- a/src/main/resources/templates/Requisitos.html
+++ b/src/main/resources/templates/Requisitos.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Guardería Estrella Brillante</title>
+        <title>Requisitos</title>
         <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
         <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
@@ -11,20 +11,27 @@
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
     </head>
     <body>
+
         <div th:replace="layout/plantilla :: header"></div>
 
         <header class="bg-warning text-center p-3">
-            <h1>Bienvenido a la Guardería</h1>
+            <h1>Requisitos</h1>
         </header>
 
         <div class="container text-center mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    <p style="font-size: 140%;">Bienvenidos a Guardería Roble Alto</p>
-                    <img src="imagenes/pPrincipal.jpg" alt="Guardería" style="width: 100%; max-width: 400px; margin-left: auto; margin-right: auto; display: block;" />
+                    <h2>Información importante para la inscripción del niño(a)</h2>
+                    <br>
+                    <p style="font-size: 120%;">1. Documentacion del niño(a)</p>
+                    <br>
+                    <p style="font-size: 120%;">2. Documentos del Padre, Madre o tutor legal</p>
+                    <br>
+                    <p style="font-size: 120%;">3. Pago de la inscripcion</p>
                 </div>
             </div>
         </div>
+
 
         <footer th:replace="layout/plantilla :: footer"></footer>
     </body>
