--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -1,111 +1,50 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menú Semanal de la Escuela</title>
-    <style>
-        body {
-            font-family: Arial ;
-           
-            background-color: LightGray;
-            text-align: center;
-        }
-        header {
-            background-color: Green;
-            color: White;
-            padding: 15px;
-            font-size: 25px;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            background: White;
-            padding: 20px;
-            box-shadow:  10px Gray;
-            border-radius: 5px;
-        }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th, td {
-            border: 1px solid Gray;
-            padding: 10px;
-            text-align: center;
-        }
-        th {
-            background-color: Green;
-            color: White;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: green;
-            color: White;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 10px;
-        }
-        .button:hover {
-            background-color: Gray;
-        }
-    </style>
-</head>
-<body>
-    
-    <div th:replace="layout/plantilla :: header"></div>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Horario de comidas</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
+        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
+        <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
+        <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
+        <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    </head>
+    <body>
 
-    <header>
-        Menú Semanal de la Escuela
-    </header>
+        <div th:replace="layout/plantilla :: header"></div>
 
-    <div class="container">
-        <h2>Consulta el Menú de la Semana</h2>
-        <table>
-            <tr>
-                <th>Día</th>
-                <th>Plato Principal</th>
-                <th>Acompañamiento</th>
-                <th>Postre</th>
-            </tr>
-            <tr>
-                <td>Lunes</td>
-                <td>Arroz con pollo</td>
-                <td>Ensalada </td>
-                <td>Fruta</td>
-            </tr>
-            <tr>
-                <td>Martes</td>
-                <td>Pollo con en salsa</td>
-                <td>Pure de papa</td>
-                <td>Gelatina</td>
-            </tr>
-            <tr>
-                <td>Miércoles</td>
-                <td>Pizza </td>
-                <td>Pan de ajo</td>
-                <td>Yogur</td>
-            </tr>
-            <tr>
-                <td>Jueves</td>
-                <td>Carne asada</td>
-                <td>tortilla</td>
-                <td>Helado</td>
-            </tr>
-            <tr>
-                <td>Viernes</td>
-                <td>Pechuga de pollo</td>
-                <td>Verduras</td>
-                <td>pastel</td>
-            </tr>
-        </table>
+        <header class="bg-warning text-center p-3">
+            <h1>Horario de comidas</h1>
+        </header>
 
-        <a href="#" class="button">Más Información</a>
-    </div>
-    
-    <footer th:replace="layout/plantilla :: footer"></footer>
+        <div class="container text-center mt-5">
+            <div class="row justify-content-left">
+                <div class="col-md-6">
+                    <h2>1ra Merienda</h2>
+                    <p style="font-size: 120%;">La primera merienda del dia se dará un horario de 10:00 am hasta las 10:30am</p>
+                    <br>
+                    <p style="font-size: 120%;">Cuenta con 1 yogurt + 1 fruta* + 1 galleta. (*Varia según el día)</p>
+                    <br>
+                    <h2>Almuerzo</h2>
+                    <p style="font-size: 120%;">El almuerzo será dado en un horario de 12:30pm hasta la 1:30pm.</p>
+                    <br>
+                    <p style="font-size: 120%;">Arroz + una proteina* + vegetales* + bebida. (*Varian según el dia)  </p>
+                    <br>
+                    <h2>2da Merienda</h2>
+                    <p style="font-size: 120%;">La segunda merienda del dia se dará en un horario de 4:00pm hasta las 4:30pm.</p>
+                    <br>
+                    <p style="font-size: 120%;">Bebida + 1 panecillo* + 1 fruta* (*Varian según el dia)  </p>
+                </div>
+                <div class="col-md-6 text-center">
+                    <img src="imagenes/Comidas.jpg" alt="" style="width: 90%;">
+                </div>
+            </div>
+        </div>
 
-</body>
+
+        <footer th:replace="layout/plantilla :: footer"></footer>
+
+    </body>
 </html>
